# docs/swagger/definitions.yaml
@@ -346,11 +346,6 @@ definitions:
         items:
           $ref: "#/definitions/ParameterValueType"
 
-      # payload:
-      #   $ref: "#/definitions/PayloadType"
-      # datasetReference:
-      #   $ref: "#/definitions/DatasetReferenceType"  
-
   PayloadType:
     description: The payload of the dataset that should we imported. Might be either provided inline or as a reference on a remote dataset.
     type: object
@@ -404,7 +399,10 @@ definitions:
       validEndDateProperty:
         type: string
         description: the property that contains information about each feature's period of validity end date - might be null to indicator that feature is most current feature (optional, can also be configured globally for all features in POST and PUT requests)
-  
+      arisenFrom:
+        type: string
+        description: the property that contains an ID that references a former spatial feature that over time evolved into the respective feature
+
   IndicatorPropertyMappingType:
     description: Definitions for mapping datasource properties to required properties for indicators
     type: object
