# kommonitor-importer-models/src/main/java/org/n52/kommonitor/importer/models/SpatialResourcePropertyMappingType.java
@@ -15,7 +15,7 @@ import javax.validation.constraints.*;
  */
 @ApiModel(description = "Definitions for mapping datasource properties to required properties for spatial units and georesources")
 @Validated
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2019-11-28T19:57:45.678+01:00")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2019-12-19T09:26:54.596+01:00")
 
 public class SpatialResourcePropertyMappingType  implements Serializable {
   private static final long serialVersionUID = 1L;
@@ -31,6 +31,9 @@ public class SpatialResourcePropertyMappingType  implements Serializable {
 
   @JsonProperty("validEndDateProperty")
   private String validEndDateProperty = null;
+
+  @JsonProperty("arisenFrom")
+  private String arisenFrom = null;
 
   public SpatialResourcePropertyMappingType identifierProperty(String identifierProperty) {
     this.identifierProperty = identifierProperty;
@@ -113,6 +116,26 @@ public class SpatialResourcePropertyMappingType  implements Serializable {
     this.validEndDateProperty = validEndDateProperty;
   }
 
+  public SpatialResourcePropertyMappingType arisenFrom(String arisenFrom) {
+    this.arisenFrom = arisenFrom;
+    return this;
+  }
+
+  /**
+   * the property that contains an ID that references a former spatial feature that over time evolved into the respective feature
+   * @return arisenFrom
+  **/
+  @ApiModelProperty(value = "the property that contains an ID that references a former spatial feature that over time evolved into the respective feature")
+
+
+  public String getArisenFrom() {
+    return arisenFrom;
+  }
+
+  public void setArisenFrom(String arisenFrom) {
+    this.arisenFrom = arisenFrom;
+  }
+
 
   @Override
   public boolean equals(java.lang.Object o) {
@@ -126,12 +149,13 @@ public class SpatialResourcePropertyMappingType  implements Serializable {
     return Objects.equals(this.identifierProperty, spatialResourcePropertyMappingType.identifierProperty) &&
         Objects.equals(this.nameProperty, spatialResourcePropertyMappingType.nameProperty) &&
         Objects.equals(this.validStartDateProperty, spatialResourcePropertyMappingType.validStartDateProperty) &&
-        Objects.equals(this.validEndDateProperty, spatialResourcePropertyMappingType.validEndDateProperty);
+        Objects.equals(this.validEndDateProperty, spatialResourcePropertyMappingType.validEndDateProperty) &&
+        Objects.equals(this.arisenFrom, spatialResourcePropertyMappingType.arisenFrom);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(identifierProperty, nameProperty, validStartDateProperty, validEndDateProperty);
+    return Objects.hash(identifierProperty, nameProperty, validStartDateProperty, validEndDateProperty, arisenFrom);
   }
 
   @Override
@@ -143,6 +167,7 @@ public class SpatialResourcePropertyMappingType  implements Serializable {
     sb.append("    nameProperty: ").append(toIndentedString(nameProperty)).append("\n");
     sb.append("    validStartDateProperty: ").append(toIndentedString(validStartDateProperty)).append("\n");
     sb.append("    validEndDateProperty: ").append(toIndentedString(validEndDateProperty)).append("\n");
+    sb.append("    arisenFrom: ").append(toIndentedString(arisenFrom)).append("\n");
     sb.append("}");
     return sb.toString();
   }
